# muesli

./: .gitignore  README.md  decorators.ipynb  pandas_df.ipynb  pyproject.toml  regular_expressions.ipynb  test_monitor_code.ipynb  timer.py
Airflow/dag/: generator.py  get_dict_city_from_gp_to_clickhouse.py  get_dict_product_from_gp_to_clickhouse.py  get_dict_users_from_gp_to_clickhouse.py
Airflow/dag/config/: config_city.yaml  config_product.yaml  config_users.yaml
Airflow/dag/template/: __init__.py  dag_template.jinja2
YAML/: anchor.yaml  merge.yaml  model.py  parser.py  pyscript.yaml  simple_format.yaml  type.yaml
postgreSQL/: index.md
