[tool.poetry]
name = "muesli"
version = "0.1.0"
description = ""
authors = ["noat"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^2.1.4"
requests = "^2.31.0"
matplotlib = "^3.8.2"
pyarrow = "^14.0.2"
apache-airflow = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
